1998-06-21  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* load.c (scm_internal_parse_path): Renamed from scm_parse_path.
	(scm_parse_path, scm_search_path): New Scheme level procedures.

	* load.h (scm_internal_parse_path, scm_parse_path,
	scm_search_path): Declared.

1998-06-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* filesys.c (dirname, basename): New procedures.

	* init.c (scm_boot_guile_1): Removed condition around
	scm_init_options.

	* dynwind.c: #include "genio.h"; #include "smob.h"; Implemented a
	new data type (guards) for representation of C level guards and
	data on the wind chain.
	(scm_internal_dynamic_wind): New function.

	* dynwind.h: Declare scm_internal_dynamic_wind.
	
	* root.h (scm_root_state): Added scm_cur_loadp.

	* root.c (mark_root): Added comment about cur_loadp.

	* load.c: #include "dynwind.h";
	(scm_primitive_load): Use scm_inner_dynamic_wind to update
	scm_cur_loadp.

	* init.c (scm_init_standard_ports): Initialize scm_def_loadp.

	* ports.c (current-load-port): New procedure.

1998-06-09  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* ioext.c (scm_isatty_p): Accept any kind of data as argument.  If
	not a tty, return #f.

	* regex-posix.c (scm_regexp_exec): Free malloced memory.  (Thanks
	to Julian Satchell and Roland Kaufmann.)

	* gh.h (gh_memv, gh_member): Fixed typos in macro definitions.
	(gh_write):  Added declaration.  (Thanks to Eiichi Takamori.)

1998-06-07  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* debug.h, debug.c (scm_start_stack): New function.  Implements
	the guts of old scm_m_start_stack.

	* debug.c (scm_m_start_stack): Use scm_start_stack.

	* init.c (scm_start_stack, scm_restart_stack): Renamed to
	start_stack and restart_stack.  (These have static scope.)

1998-05-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.c (rl_cleanup_after_signals, rl_free_line_state): New
	readline functions to come in release 2.3.  (Thanks to Chet
	Ramey.)
	(handle_errors): Use the above functions.
